@startuml
title Paketni Diagram

package "Home Assistant" <<aplikacija>> {

    package "UporabniškiVmesnik" {
    }
    package "Store" <<Home Assistant shramba>> {
    }
    package "Entitete" <<Home Assistant entitete>> {
    }

    package "Varko" <<podsistem>> {
        package "VarkoPlošča" {
        }
        package "UpravljanjeNaprav" {
            class DeviceManager {}
            class VarkoLight {}
        }
        package "UpravljanjeCon" {
            class ZoneManager {}
        }
        package "UpravljanjeSUS" {
            class GroupManager {}
        }
        package "UpravljanjeStanj" {
            class StateManager {}
            class State {}
            class IdleState {}
            class ReadyState {}
            class ActiveState {}
        }
        package "UpravljanjeRadioPostaje" {
            class RadioBrowserAPI {}
        }
    }

}

package "Zunanji sistemi" {
    package "Frigate" {
    }
    package "MQTT" {
    }
}

UporabniškiVmesnik .-> VarkoPlošča : "dostopa"
Varko .-> MQTT : "dostopa"
Frigate .-> MQTT : "dostopa"
UpravljanjeStanj --> UpravljanjeNaprav : "proži"
UpravljanjeCon --> UpravljanjeStanj : "proži"
UpravljanjeCon --> UpravljanjeSUS : "proži"
VarkoPlošča --> UpravljanjeNaprav : "proži"
VarkoPlošča --> UpravljanjeCon : "proži"
VarkoPlošča --> UpravljanjeSUS : "proži"
VarkoPlošča --> UpravljanjeStanj : "proži"
VarkoPlošča --> UpravljanjeRadioPostaje : "proži"
UpravljanjeNaprav .-> Entitete : "dostopa"
UpravljanjeNaprav --> UpravljanjeRadioPostaje : "proži"
UpravljanjeSUS .-> Entitete : "dostopa"
UpravljanjeCon .-> Entitete : "dostopa"
Varko .-> Store : "dostopa"
@enduml
